# physicSense

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROOF.md  README.md
.github/workflows/: ci.yml
benchmarks/: PROOF.md  bench.js  results.json
browser-api/: SPEC.md  package.json
browser-api/extension/: background.js  content.js  manifest.json
browser-api/extension/native-host/: README.md  com.physicSense.native.json
browser-api/src/: acoustic-modality.js  index.d.ts  neuromotor-modality.js  polyfill.js  wifi-modality.js
browser-api/src/tests/: neuromotor.test.js  polyfill.test.js
core/acoustic-dsp/: Cargo.toml
core/acoustic-dsp/src/: chirp.rs  lib.rs  pipeline.rs  tdoa.rs
core/neuromotor/: Cargo.toml
core/neuromotor/src/: bandpass.rs  gait.rs  lib.rs  scoring.rs  tremor.rs
core/passive-pcl/: Cargo.toml
core/passive-pcl/src/: cross_correlator.rs  doppler.rs  lib.rs  range_map.rs  signal.rs
dashboard/: package.json
dashboard/public/: dashboard.js  demo.html  floorplan.html  index.html
docs/adr/: ADR-001-passive-pcl-architecture.md  ADR-002-acoustic-fmcw-fusion.md  ADR-003-federated-dp-sgd.md
federated/: Cargo.toml
federated/js/: federated-node.js  webrtc-transport.js
federated/src/: aggregator.rs  gradient.rs  lib.rs  peer.rs  privacy.rs  protocol.rs
fusion/: Cargo.toml
fusion/src/: attention.rs  lib.rs  pipeline.rs
native-host/: Cargo.toml  install.sh
native-host/src/: main.rs
research/: clinical-validation-protocol.md  updrs-proxy-methodology.md
tracking/: hub.js  package.json  tracker.js
