[workspace]
members = [
    "core/passive-pcl",
    "core/acoustic-dsp",
    "core/neuromotor",
    "fusion",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abhishek S <abhisheksjayanth@gmail.com>"]
license = "MIT"

[workspace.dependencies]
rustfft      = "6.2"
num-complex  = "0.4"
ndarray      = "0.15"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
wasm-bindgen = "0.2"
js-sys       = "0.3"
