[package]
name    = "federated"
version.workspace = true
edition.workspace = true

[dependencies]
neuromotor  = { path = "../core/neuromotor" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }

[dev-dependencies]
approx = "0.5"
